# lidar_obstacle_avoidance

./: README.md  husky_with_livox  troubleshooting.md
husky_with_livox/: CMakeLists.txt  README.md  package.xml
husky_with_livox/launch/: description.launch  hdbscan_clusterer.launch  husky_with_livox.launch  offline_hdbscan_test.launch  point_cloud_converter.launch
husky_with_livox/local_tests/: convert_label_to_color.ipynb  draw_bounding_box.ipynb  paint_point_cloud.ipynb  wall_table_chair.pcd
husky_with_livox/rviz/: bounding_boxes.rviz  livox_simulation.rviz
husky_with_livox/shell/: install_dependencies.sh
husky_with_livox/src/: hdbscan_clusterizer.py  livox_to_cluster_transform.py  process_pcl.py
husky_with_livox/src/point_cloud_utils/: hdbscan_clusterizer.py  offline_pcl_utils.py  point_cloud_utils.py  pointcloud_utils.py
husky_with_livox/src/utils/: helper_functions.py  k_means_clustering.py  offline_pcl_utils.py  point_cloud_utils.py
husky_with_livox/test_data/: 141.100000000.pcd  141.210000000.pcd
husky_with_livox/test_data/table_closer/: 268.930000000.pcd  269.030000000.pcd  269.130000000.pcd  269.220000000.pcd  269.320000000.pcd  269.420000000.pcd  269.520000000.pcd  table_closer.bag
husky_with_livox/test_data/table_far_away/: 249.490000000.pcd  249.580000000.pcd  (+4 more)
husky_with_livox/urdf/: custom_description.urdf.xacro  empty.urdf  livox_mid70.xacro
reference/cropping/: crop.py
reference/downsampling/: README.md  voxel_grid_downsampling.cpp
reference/downsampling/voxel_grid_downsampling_cpp/: CMakeLists.txt  voxel_grid_downsampling.cpp
(+6 files in other folders)
